HW05/Deployment-DB-HW04.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-db
  namespace: gb-devops-conteiner-hw05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: postgresql-db
    spec:
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 1Gi
          limits:
            cpu: 100m
            memory: 1Gi
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: postgresql-storage
