HW05/Service-Postgre.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
  namespace: gb-devops-conteiner-hw05
spec:
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: postgresql-db
  type: ClusterIP
