HW05/Service-Redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redmine-service
  namespace: gb-devops-conteiner-hw05
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine-app
  type: ClusterIP
